// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EarnList  should match snapshot in case no data 1`] = `
<DocumentFragment>
  <div
    class="sc-eqUAAy jWPfJu sc-jEACwC dAlFxs"
  >
    <div
      class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
      style="max-width: 225px;"
    >
      <p
        class="sc-dAlyuH kHUTXv sc-cwHptR btmDVI"
      >
        Token
      </p>
    </div>
    <div
      class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
      style="max-width: 145px;"
    >
      <p
        class="sc-dAlyuH kHUTXv sc-cwHptR btmDVI"
      >
        Available Balance
      </p>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-kud2p2-MuiSvgIcon-root"
        data-mui-internal-clone-element="true"
        data-testid="HelpOutlineIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11 18h2v-2h-2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4"
        />
      </svg>
    </div>
    <div
      class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
      style="max-width: 115px;"
    >
      <p
        class="sc-dAlyuH kHUTXv sc-cwHptR btmDVI"
      >
        Total Staked
      </p>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-kud2p2-MuiSvgIcon-root"
        data-mui-internal-clone-element="true"
        data-testid="HelpOutlineIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11 18h2v-2h-2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4"
        />
      </svg>
    </div>
    <div
      class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
      style="max-width: 85px;"
    >
      <p
        class="sc-dAlyuH kHUTXv sc-cwHptR btmDVI"
      >
        APR
      </p>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-kud2p2-MuiSvgIcon-root"
        data-mui-internal-clone-element="true"
        data-testid="HelpOutlineIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11 18h2v-2h-2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4"
        />
      </svg>
    </div>
    <div
      class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
      style="max-width: 90px;"
    >
      <p
        class="sc-dAlyuH kHUTXv sc-cwHptR btmDVI"
      >
        Your Stake
      </p>
    </div>
    <div
      class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
      style="max-width: 110px;"
    >
      <p
        class="sc-dAlyuH kHUTXv sc-cwHptR btmDVI"
      >
        Earned
      </p>
    </div>
    <div
      class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
      style="max-width: 75px;"
    >
      <p
        class="sc-dAlyuH kHUTXv sc-cwHptR btmDVI"
      >
        Actions
      </p>
    </div>
  </div>
  <div
    class="sc-hzhJZQ dWUUbl"
  >
    <span
      class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorSecondary css-1szo49z-MuiCircularProgress-root"
      role="progressbar"
      style="width: 40px; height: 40px;"
    >
      <svg
        class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
          cx="44"
          cy="44"
          fill="none"
          r="20.2"
          stroke-width="3.6"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`EarnList  should match snapshot with data 1`] = `
<DocumentFragment>
  <div
    class="sc-eqUAAy jWPfJu sc-jEACwC dAlFxs"
  >
    <div
      class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
      style="max-width: 225px;"
    >
      <p
        class="sc-dAlyuH kHUTXv sc-cwHptR btmDVI"
      >
        Token
      </p>
    </div>
    <div
      class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
      style="max-width: 145px;"
    >
      <p
        class="sc-dAlyuH kHUTXv sc-cwHptR btmDVI"
      >
        Available Balance
      </p>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-kud2p2-MuiSvgIcon-root"
        data-mui-internal-clone-element="true"
        data-testid="HelpOutlineIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11 18h2v-2h-2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4"
        />
      </svg>
    </div>
    <div
      class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
      style="max-width: 115px;"
    >
      <p
        class="sc-dAlyuH kHUTXv sc-cwHptR btmDVI"
      >
        Total Staked
      </p>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-kud2p2-MuiSvgIcon-root"
        data-mui-internal-clone-element="true"
        data-testid="HelpOutlineIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11 18h2v-2h-2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4"
        />
      </svg>
    </div>
    <div
      class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
      style="max-width: 85px;"
    >
      <p
        class="sc-dAlyuH kHUTXv sc-cwHptR btmDVI"
      >
        APR
      </p>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-kud2p2-MuiSvgIcon-root"
        data-mui-internal-clone-element="true"
        data-testid="HelpOutlineIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11 18h2v-2h-2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4"
        />
      </svg>
    </div>
    <div
      class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
      style="max-width: 90px;"
    >
      <p
        class="sc-dAlyuH kHUTXv sc-cwHptR btmDVI"
      >
        Your Stake
      </p>
    </div>
    <div
      class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
      style="max-width: 110px;"
    >
      <p
        class="sc-dAlyuH kHUTXv sc-cwHptR btmDVI"
      >
        Earned
      </p>
    </div>
    <div
      class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
      style="max-width: 75px;"
    >
      <p
        class="sc-dAlyuH kHUTXv sc-cwHptR btmDVI"
      >
        Actions
      </p>
    </div>
  </div>
  <div
    class="sc-fUnMCh hTxGwK"
  >
    <div
      class="sc-ikkxIA ciecAv"
      data-testid="earn-list-item"
    >
      <div
        class="sc-eqUAAy jWPfJu sc-cPiKLX hekCwR"
      >
        <div
          class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
          style="max-width: 225px;"
        >
          <div
            class="sc-eqUAAy jWPfJu sc-iGgWBj xSUkw"
          >
            <div
              class="sc-fqkvVR jAPbXp"
            >
              <div
                class="sc-eqUAAy jWPfJu"
              >
                <div>
                  <img
                    alt="logo"
                    class="sc-dcJsrY khyFAh"
                    src="https://raw.githubusercontent.com/bobanetwork/token-list/main/assets/boba.svg"
                  />
                </div>
                <div>
                  <p
                    class="sc-aXZVg ijoHgY"
                  >
                    BOBA
                  </p>
                  <p
                    class="sc-gEvEer lhNhhM"
                  >
                    Boba Token
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
          style="max-width: 145px;"
        >
          <p
            class="sc-dAlyuH kHUTXv"
          >
            99.95k
          </p>
        </div>
        <div
          class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
          style="max-width: 115px;"
        >
          <p
            class="sc-dAlyuH kHUTXv"
          >
            100.00k
          </p>
        </div>
        <div
          class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
          style="max-width: 85px;"
        >
          <p
            class="sc-dAlyuH kHUTXv"
          >
            0.00
          </p>
        </div>
        <div
          class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
          style="max-width: 90px;"
        >
          <p
            class="sc-dAlyuH kHUTXv"
          >
            0
          </p>
        </div>
        <div
          class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
          style="max-width: 110px;"
        >
          <p
            class="sc-dAlyuH kHUTXv"
          >
            0
          </p>
        </div>
        <div
          class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
          style="max-width: 75px;"
        >
          <div
            class="sc-dAbbOL iqwBcO"
            data-testid="action-btn"
          >
            <div
              class="sc-feUZmu kjINkZ"
            >
              <div>
                <div
                  data-src="actions.svg"
                  src=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-ikkxIA ciecAv"
      data-testid="earn-list-item"
    >
      <div
        class="sc-eqUAAy jWPfJu sc-cPiKLX hekCwR"
      >
        <div
          class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
          style="max-width: 225px;"
        >
          <div
            class="sc-eqUAAy jWPfJu sc-iGgWBj xSUkw"
          >
            <div
              class="sc-fqkvVR jAPbXp"
            >
              <div
                class="sc-eqUAAy jWPfJu"
              >
                <div>
                  <img
                    alt="logo"
                    class="sc-dcJsrY khyFAh"
                    src="https://raw.githubusercontent.com/bobanetwork/token-list/main/assets/eth.svg"
                  />
                </div>
                <div>
                  <p
                    class="sc-aXZVg ijoHgY"
                  >
                    ETH
                  </p>
                  <p
                    class="sc-gEvEer lhNhhM"
                  >
                    ETH
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
          style="max-width: 145px;"
        >
          <p
            class="sc-dAlyuH kHUTXv"
          >
            0.85
          </p>
        </div>
        <div
          class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
          style="max-width: 115px;"
        >
          <p
            class="sc-dAlyuH kHUTXv"
          >
            0.61
          </p>
        </div>
        <div
          class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
          style="max-width: 85px;"
        >
          <p
            class="sc-dAlyuH kHUTXv"
          >
            0.10
          </p>
        </div>
        <div
          class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
          style="max-width: 90px;"
        >
          <p
            class="sc-dAlyuH kHUTXv"
          >
            0
          </p>
        </div>
        <div
          class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
          style="max-width: 110px;"
        >
          <p
            class="sc-dAlyuH kHUTXv"
          >
            0
          </p>
        </div>
        <div
          class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
          style="max-width: 75px;"
        >
          <div
            class="sc-dAbbOL iqwBcO"
            data-testid="action-btn"
          >
            <div
              class="sc-feUZmu kjINkZ"
            >
              <div>
                <div
                  data-src="actions.svg"
                  src=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-ikkxIA ciecAv"
      data-testid="earn-list-item"
    >
      <div
        class="sc-eqUAAy jWPfJu sc-cPiKLX hekCwR"
      >
        <div
          class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
          style="max-width: 225px;"
        >
          <div
            class="sc-eqUAAy jWPfJu sc-iGgWBj xSUkw"
          >
            <div
              class="sc-fqkvVR jAPbXp"
            >
              <div
                class="sc-eqUAAy jWPfJu"
              >
                <div>
                  <img
                    alt="logo"
                    class="sc-dcJsrY khyFAh"
                    src="https://raw.githubusercontent.com/bobanetwork/token-list/main/assets/omg.svg"
                  />
                </div>
                <div>
                  <p
                    class="sc-aXZVg ijoHgY"
                  >
                    OMG
                  </p>
                  <p
                    class="sc-gEvEer lhNhhM"
                  >
                    OMG Token
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
          style="max-width: 145px;"
        >
          <p
            class="sc-dAlyuH kHUTXv"
          >
            0
          </p>
        </div>
        <div
          class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
          style="max-width: 115px;"
        >
          <p
            class="sc-dAlyuH kHUTXv"
          >
            0
          </p>
        </div>
        <div
          class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
          style="max-width: 85px;"
        >
          <p
            class="sc-dAlyuH kHUTXv"
          >
            0.00
          </p>
        </div>
        <div
          class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
          style="max-width: 90px;"
        >
          <p
            class="sc-dAlyuH kHUTXv"
          >
            0
          </p>
        </div>
        <div
          class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
          style="max-width: 110px;"
        >
          <p
            class="sc-dAlyuH kHUTXv"
          >
            0
          </p>
        </div>
        <div
          class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
          style="max-width: 75px;"
        >
          <div
            class="sc-dAbbOL iqwBcO"
            data-testid="action-btn"
          >
            <div
              class="sc-feUZmu kjINkZ"
            >
              <div>
                <div
                  data-src="actions.svg"
                  src=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-ikkxIA ciecAv"
      data-testid="earn-list-item"
    >
      <div
        class="sc-eqUAAy jWPfJu sc-cPiKLX hekCwR"
      >
        <div
          class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
          style="max-width: 225px;"
        >
          <div
            class="sc-eqUAAy jWPfJu sc-iGgWBj xSUkw"
          >
            <div
              class="sc-fqkvVR jAPbXp"
            >
              <div
                class="sc-eqUAAy jWPfJu"
              >
                <div>
                  <img
                    alt="logo"
                    class="sc-dcJsrY khyFAh"
                    src="https://raw.githubusercontent.com/bobanetwork/token-list/main/assets/usdc.svg"
                  />
                </div>
                <div>
                  <p
                    class="sc-aXZVg ijoHgY"
                  >
                    USDC
                  </p>
                  <p
                    class="sc-gEvEer lhNhhM"
                  >
                    USD Coin
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
          style="max-width: 145px;"
        >
          <p
            class="sc-dAlyuH kHUTXv"
          >
            0
          </p>
        </div>
        <div
          class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
          style="max-width: 115px;"
        >
          <p
            class="sc-dAlyuH kHUTXv"
          >
            0
          </p>
        </div>
        <div
          class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
          style="max-width: 85px;"
        >
          <p
            class="sc-dAlyuH kHUTXv"
          >
            0.00
          </p>
        </div>
        <div
          class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
          style="max-width: 90px;"
        >
          <p
            class="sc-dAlyuH kHUTXv"
          >
            0
          </p>
        </div>
        <div
          class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
          style="max-width: 110px;"
        >
          <p
            class="sc-dAlyuH kHUTXv"
          >
            0
          </p>
        </div>
        <div
          class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
          style="max-width: 75px;"
        >
          <div
            class="sc-dAbbOL iqwBcO"
            data-testid="action-btn"
          >
            <div
              class="sc-feUZmu kjINkZ"
            >
              <div>
                <div
                  data-src="actions.svg"
                  src=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
